@@ -20,7 +20,8 @@ repositories {
 
 // tag::dependencies[]
 dependencies {
-    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '6.14.2'
+    testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
+    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.0.6'
 }
 // end::dependencies[]
 
@@ -41,6 +42,13 @@ configurations {
     aatCompile.extendsFrom(testCompile)
     cucumberRuntime.extendsFrom(functionalRuntime)
 }
+
+task highLevelDataSetup(type: JavaExec) {
+    main = "uk.gov.hmcts.ccd.caseactivity.befta.HighLevelDataSetupApp"
+    classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 
 task smoke(type: Test) {
   description = 'Executes smoke tests against an the CCD Case Activity API instance just deployed'
